AGVs now remove finished interval in currentPlan